Fix inter block spaces & transaction graph layout on small screen

--- a/_scss/layout/_prenet.scss
+++ b/_scss/layout/_prenet.scss
@@ -699,7 +699,7 @@ body.prenet {
       -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
       flex-grow: 1;
-      margin: 25px 45px 0 0;
+      margin: 25px 25px 0 0;
       padding: 8px 5px 5px 12px;
       background-color: #ffffff;
       border: 1px solid #c0c5cb;
@@ -731,6 +731,10 @@ body.prenet {
 
   .full-width {
     width: 100%;
+  }
+
+  .padding-right-10 {
+    padding-right: 10px;
   }
 
   .marginized {
