--- a/css/style.css
+++ b/css/style.css
@@ -6063,7 +6063,7 @@ body.prenet .headtable .doclet {
   -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
-  margin: 25px 45px 0 0;
+  margin: 25px 25px 0 0;
   padding: 8px 5px 5px 12px;
   background-color: #ffffff;
   border: 1px solid #c0c5cb;
@@ -6098,6 +6098,10 @@ body.prenet .headtable .doclet div.link a {
 
 body.prenet .full-width {
   width: 100%;
+}
+
+body.prenet .padding-right-10 {
+  padding-right: 10px;
 }
 
 body.prenet .marginized {
